--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipe App</title>
+    <title>recipe-app</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/recipe-app-2025/src/main.jsx"></script>
-  </body>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>cd
 </html>
